# oneflake

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  justfile  mkdocs.yml  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy-docs.yml  publish.yml  test-publish.yml  test.yml
docs/: index.md
docs/about/: about.md
docs/learn/: advanced-usage.md  basic-usage.md  common-id-profiles.md  error-handling.md  installation.md  thread-safety-model.md
docs/overrides/mkdocstrings/python/material/: module.html.jinja
docs/reference/: constants.md  exceptions.md  flake-decoder.md  flake-generator.md  flake-parts.md
docs/release/: release-notes.md
docs/resources/: faq.md
src/oneflake/: __init__.py  _constants.c  _constants.h  _decoder.c  _decoder.h  _exceptions.c  _exceptions.h  _generator.c  _generator.h  _oneflake.c  _oneflake.h  _oneflake.pyi  _validation.c  _validation.h
tests/: __init__.py  conftest.py  test_decoder.py  test_generator.py  test_oneflake.py
tests/common/: __init__.py  constants.py  factories.py  fixtures.py  utils.py
